--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="module">
       const canvas = document.querySelector("canvas");
 
+      const GRID_SIZE = 32;
+
       // Your WebGPU code will begin here!
 
       const adapter = await navigator.gpu.requestAdapter();
@@ -29,7 +31,7 @@
           {
             view: context.getCurrentTexture().createView(),
             loadOp: "clear",
-            clearValue: { r: 0.5, g: 0.5, b: 0.2, a: 1 }, // New line
+            clearValue: { r: 0.0, g: 0.0, b: 0.6, a: 1 }, // New line
             storeOp: "store",
           },
         ],
@@ -67,20 +69,40 @@
           },
         ],
       };
+      // Create a uniform buffer that describes the grid.
+      const uniformArray = new Float32Array([GRID_SIZE, GRID_SIZE]);
+      const uniformBuffer = device.createBuffer({
+        label: "Grid Uniforms",
+        size: uniformArray.byteLength,
+        usage: GPUBufferUsage.UNIFORM | GPUBufferUsage.COPY_DST,
+      });
+      device.queue.writeBuffer(uniformBuffer, 0, uniformArray);
+
       const cellShaderModule = device.createShaderModule({
         label: "Cell shader",
         code: `
-    @vertex
-    fn vertexMain(@location(0) pos: vec2f) ->
-      @builtin(position) vec4f {
-      return vec4f(pos, 0, 1);
-    }
+        @group(0) @binding(0) var<uniform> grid: vec2f;
 
-    @fragment
-    fn fragmentMain() -> @location(0) vec4f {
-      return vec4f(1, 0, 0, 1);
-    }
-  `,
+@vertex
+fn vertexMain(@location(0) pos: vec2f,
+              @builtin(instance_index) instance: u32) ->
+  @builtin(position) vec4f {
+
+  let i = f32(instance);
+  // Compute the cell coordinate from the instance_index
+  let cell = vec2f(i % grid.x, floor(i / grid.x));
+
+  let cellOffset = cell / grid * 2;
+  let gridPos = (pos + 1) / grid - 1 + cellOffset;
+
+  return vec4f(gridPos, 0, 1);
+}
+
+        @fragment
+        fn fragmentMain() -> @location(0) vec4f {
+        return vec4f(1, 0, 0, 1);
+        }
+    `,
       });
       const cellPipeline = device.createRenderPipeline({
         label: "Cell pipeline",
@@ -102,10 +124,21 @@
       });
       // After encoder.beginRenderPass()
 
-      pass.setPipeline(cellPipeline);
-      pass.setVertexBuffer(0, vertexBuffer);
-      pass.draw(vertices.length / 2); // 6 vertices
+      const bindGroup = device.createBindGroup({
+        label: "Cell renderer bind group",
+        layout: cellPipeline.getBindGroupLayout(0),
+        entries: [
+          {
+            binding: 0,
+            resource: { buffer: uniformBuffer },
+          },
+        ],
+      });
 
+      pass.setPipeline(cellPipeline);
+      pass.setBindGroup(0, bindGroup); // New line!
+      pass.setVertexBuffer(0, vertexBuffer);
+      pass.draw(vertices.length / 2, GRID_SIZE * GRID_SIZE);
       // before pass.end()
       pass.end();
       const commandBuffer = encoder.finish();
