--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       const canvas = document.querySelector("canvas");
 
       const GRID_SIZE = 32;
-      const UPDATE_INTERVAL = 200; // Update every 200ms (5 times/sec)
+      const UPDATE_INTERVAL = 500; // Update every 200ms (5 times/sec)
       let step = 0; // Track how many simulation steps have been run
+      const WORKGROUP_SIZE = 8;
 
       // Your WebGPU code will begin here!
 
@@ -148,6 +149,32 @@ fn fragmentMain(input: VertexOutput) -> @location(0) vec4f {
   return vec4f(c, 1-c.x, 1);
 }
     `,
+      });
+
+      // Create the compute shader that will process the simulation.
+      const simulationShaderModule = device.createShaderModule({
+        label: "Game of Life simulation shader",
+        code: `
+        @group(0) @binding(0) var<uniform> grid: vec2f;
+
+@group(0) @binding(1) var<storage> cellStateIn: array<u32>;
+@group(0) @binding(2) var<storage, read_write> cellStateOut: array<u32>;
+   
+fn cellIndex(cell: vec2u) -> u32 {
+  return cell.y * u32(grid.x) + cell.x;
+}
+
+@compute @workgroup_size(${WORKGROUP_SIZE}, ${WORKGROUP_SIZE})
+fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
+  // New lines. Flip the cell state every step.
+  if (cellStateIn[cellIndex(cell.xy)] == 1) {
+    cellStateOut[cellIndex(cell.xy)] = 0;
+  } else {
+    cellStateOut[cellIndex(cell.xy)] = 1;
+  }
+
+
+    }`,
       });
       const cellPipeline = device.createRenderPipeline({
         label: "Cell pipeline",
