Simulation is running

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       const canvas = document.querySelector("canvas");
 
       const GRID_SIZE = 32;
-      const UPDATE_INTERVAL = 500; // Update every 200ms (5 times/sec)
+      const UPDATE_INTERVAL = 200; // Update every 200ms (5 times/sec)
       let step = 0; // Track how many simulation steps have been run
       const WORKGROUP_SIZE = 8;
 
@@ -99,17 +99,23 @@
       ];
 
       // Mark every third cell of the first grid as active.
-      for (let i = 0; i < cellStateArray.length; i += 3) {
-        cellStateArray[i] = 1;
-      }
-      device.queue.writeBuffer(cellStateStorage[0], 0, cellStateArray);
+      //for (let i = 0; i < cellStateArray.length; i += 3) {
+      //  cellStateArray[i] = 1;
+      //}
+      //device.queue.writeBuffer(cellStateStorage[0], 0, cellStateArray);
 
       // Mark every other cell of the second grid as active.
-      for (let i = 0; i < cellStateArray.length; i++) {
-        cellStateArray[i] = i % 2;
-      }
-      device.queue.writeBuffer(cellStateStorage[1], 0, cellStateArray);
+      //for (let i = 0; i < cellStateArray.length; i++) {
+      //  cellStateArray[i] = i % 2;
+      // }
+      //  device.queue.writeBuffer(cellStateStorage[1], 0, cellStateArray);
 
+      // Set each cell to a random state, then copy the JavaScript array
+      // into the storage buffer.
+      for (let i = 0; i < cellStateArray.length; ++i) {
+        cellStateArray[i] = Math.random() > 0.6 ? 1 : 0;
+      }
+      device.queue.writeBuffer(cellStateStorage[0], 0, cellStateArray);
       const cellShaderModule = device.createShaderModule({
         label: "Cell shader",
         code: `
@@ -153,32 +159,131 @@ fn fragmentMain(input: VertexOutput) -> @location(0) vec4f {
 
       // Create the compute shader that will process the simulation.
       const simulationShaderModule = device.createShaderModule({
-        label: "Game of Life simulation shader",
+        label: "Life simulation shader",
         code: `
-        @group(0) @binding(0) var<uniform> grid: vec2f;
+    @group(0) @binding(0) var<uniform> grid: vec2f;
 
-@group(0) @binding(1) var<storage> cellStateIn: array<u32>;
-@group(0) @binding(2) var<storage, read_write> cellStateOut: array<u32>;
-   
-fn cellIndex(cell: vec2u) -> u32 {
-  return cell.y * u32(grid.x) + cell.x;
-}
+    @group(0) @binding(1) var<storage> cellStateIn: array<u32>;
+    @group(0) @binding(2) var<storage, read_write> cellStateOut: array<u32>;
 
-@compute @workgroup_size(${WORKGROUP_SIZE}, ${WORKGROUP_SIZE})
-fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
-  // New lines. Flip the cell state every step.
-  if (cellStateIn[cellIndex(cell.xy)] == 1) {
-    cellStateOut[cellIndex(cell.xy)] = 0;
-  } else {
-    cellStateOut[cellIndex(cell.xy)] = 1;
-  }
+    fn cellIndex(cell: vec2u) -> u32 {
+      return (cell.y % u32(grid.y)) * u32(grid.x) +
+              (cell.x % u32(grid.x));
+    }
 
+    fn cellActive(x: u32, y: u32) -> u32 {
+      return cellStateIn[cellIndex(vec2(x, y))];
+    }
 
-    }`,
+    @compute @workgroup_size(${WORKGROUP_SIZE}, ${WORKGROUP_SIZE})
+    fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
+      // Determine how many active neighbors this cell has.
+      let activeNeighbors = cellActive(cell.x+1, cell.y+1) +
+                            cellActive(cell.x+1, cell.y) +
+                            cellActive(cell.x+1, cell.y-1) +
+                            cellActive(cell.x, cell.y-1) +
+                            cellActive(cell.x-1, cell.y-1) +
+                            cellActive(cell.x-1, cell.y) +
+                            cellActive(cell.x-1, cell.y+1) +
+                            cellActive(cell.x, cell.y+1);
+
+      let i = cellIndex(cell.xy);
+
+      // Conway's game of life rules:
+      switch activeNeighbors {
+        case 2: {
+          cellStateOut[i] = cellStateIn[i];
+        }
+        case 3: {
+          cellStateOut[i] = 1;
+        }
+        default: {
+          cellStateOut[i] = 0;
+        }
+      }
+    }
+  `,
       });
+
+      // After encoder.beginRenderPass()
+
+      // Create the bind group layout and pipeline layout.
+      const bindGroupLayout = device.createBindGroupLayout({
+        label: "Cell Bind Group Layout",
+        entries: [
+          {
+            binding: 0,
+            visibility:
+              GPUShaderStage.VERTEX |
+              GPUShaderStage.FRAGMENT |
+              GPUShaderStage.COMPUTE,
+            buffer: {}, // Grid uniform buffer
+          },
+          {
+            binding: 1,
+            visibility:
+              GPUShaderStage.VERTEX |
+              GPUShaderStage.FRAGMENT |
+              GPUShaderStage.COMPUTE,
+            buffer: { type: "read-only-storage" }, // Cell state input buffer
+          },
+          {
+            binding: 2,
+            visibility: GPUShaderStage.COMPUTE,
+            buffer: { type: "storage" }, // Cell state output buffer
+          },
+        ],
+      });
+
+      // Create a bind group to pass the grid uniforms into the pipeline
+      const bindGroups = [
+        device.createBindGroup({
+          label: "Cell renderer bind group A",
+          layout: bindGroupLayout, // Updated Line
+          entries: [
+            {
+              binding: 0,
+              resource: { buffer: uniformBuffer },
+            },
+            {
+              binding: 1,
+              resource: { buffer: cellStateStorage[0] },
+            },
+            {
+              binding: 2, // New Entry
+              resource: { buffer: cellStateStorage[1] },
+            },
+          ],
+        }),
+        device.createBindGroup({
+          label: "Cell renderer bind group B",
+          layout: bindGroupLayout, // Updated Line
+
+          entries: [
+            {
+              binding: 0,
+              resource: { buffer: uniformBuffer },
+            },
+            {
+              binding: 1,
+              resource: { buffer: cellStateStorage[1] },
+            },
+            {
+              binding: 2, // New Entry
+              resource: { buffer: cellStateStorage[0] },
+            },
+          ],
+        }),
+      ];
+
+      const pipelineLayout = device.createPipelineLayout({
+        label: "Cell Pipeline Layout",
+        bindGroupLayouts: [bindGroupLayout],
+      });
+
       const cellPipeline = device.createRenderPipeline({
         label: "Cell pipeline",
-        layout: "auto",
+        layout: pipelineLayout, // Updated!,
         vertex: {
           module: cellShaderModule,
           entryPoint: "vertexMain",
@@ -194,45 +299,38 @@ fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
           ],
         },
       });
-      // After encoder.beginRenderPass()
 
-      const bindGroups = [
-        device.createBindGroup({
-          label: "Cell renderer bind group A",
-          layout: cellPipeline.getBindGroupLayout(0),
-          entries: [
-            {
-              binding: 0,
-              resource: { buffer: uniformBuffer },
-            },
-            {
-              binding: 1,
-              resource: { buffer: cellStateStorage[0] },
-            },
-          ],
-        }),
-        device.createBindGroup({
-          label: "Cell renderer bind group B",
-          layout: cellPipeline.getBindGroupLayout(0),
-          entries: [
-            {
-              binding: 0,
-              resource: { buffer: uniformBuffer },
-            },
-            {
-              binding: 1,
-              resource: { buffer: cellStateStorage[1] },
-            },
-          ],
-        }),
-      ];
+      // Create a compute pipeline that updates the game state.
+      const simulationPipeline = device.createComputePipeline({
+        label: "Simulation pipeline",
+        layout: pipelineLayout,
+        compute: {
+          module: simulationShaderModule,
+          entryPoint: "computeMain",
+        },
+      });
 
       // Move all of our rendering code into a function
       function updateGrid() {
-        step++; // Increment the step count
+        // Move the encoder creation to the top of the function.
+        const encoder = device.createCommandEncoder();
+
+        const computePass = encoder.beginComputePass();
+
+        computePass.setPipeline(simulationPipeline);
+        computePass.setBindGroup(0, bindGroups[step % 2]);
+
+        // New lines
+        const workgroupCount = Math.ceil(GRID_SIZE / WORKGROUP_SIZE);
+        computePass.dispatchWorkgroups(workgroupCount, workgroupCount);
+
+        computePass.end();
+
+        step++;
 
         // Start a render pass
-        const encoder = device.createCommandEncoder();
+        // Increment the step count
+        //const encoder = device.createCommandEncoder();
         const pass = encoder.beginRenderPass({
           colorAttachments: [
             {
@@ -252,6 +350,7 @@ fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
 
         // End the render pass and submit the command buffer
         pass.end();
+
         device.queue.submit([encoder.finish()]);
       }
 
